--- a/templates/admin/bolgs-input.html
+++ b/templates/admin/bolgs-input.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport"content="width=device-width,initial-scale=1.0" />
 		<title>博客管理</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-		<link rel="stylesheet" href="../../lib/editormd/css/editormd.min.css" />
-		<link rel="stylesheet" type="text/css" href="../../css/me.css"/>
+		<link rel="stylesheet" href="/static/lib/editormd/css/editormd.min.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/me.css"/>
 	</head>
 	<body onload="loadINFO()">
 		<nav class="ui inverted  attached segment m-padded-tb-mini m-shadow-small"  >
@@ -51,7 +51,7 @@
 						<div class="required field">
 							<div class="ui left labeled input">
 							<div class="ui  selection compact teal basic dropdown label">
-								<input type="hidden" name="" id="flag" value="原创" th:value="${blog.flag}" />
+								<!--需要重做 <input type="hidden" name="" id="flag" value="原创" th:value="${blog.flag}" /> -->
 								<i class="dropdown icon"></i>
 								<div class=" text">原创</div>
 								<div class="menu">
@@ -60,8 +60,10 @@
 									<div class="item" data-value="翻译">翻译</div>
 								</div>
 							</div>
-								<input type="text" name="title" id="title" value="" placeholder="标题" th:value="${blog.title}" />
+								<!-- 需要重做 <input type="text" name="title" id="title" value="" placeholder="标题" th:value="${blog.title}" /> -->
 							</div>
+
+							<!-- description 这里也需要重做 -->
 							<textarea id="description" placeholder="博客概述" name="description" th:text="${blog.description}" style="margin-top:0px;margin-bottom:0px;height:110px;"></textarea>
 
 
@@ -69,7 +71,7 @@
 						<div class="field">
 							<div class="field">
 								<div id="md-content"style="z-index: 1 !important;">
-<!--									文本输入区域-->
+<!--								需要重做	文本输入区域-->
 									<textarea id="content" placeholder="博客内容" name="content" th:text="${blog.content}" style="display: none;"></textarea>
 								</div>
 							</div>
@@ -80,6 +82,7 @@
 								<div class="ui left labeled action input">
 									<label for="" class="ui compact teal basic label">分类</label>
 									<div class="ui fluid selection dropdown">
+										<!-- type这里需要重做 -->
 										<input type="hidden" name="type" id="type" value="" th:value="${blog.type}" />
 										<i class="dropdown icon"></i>
 										<div id="type_text" class="default text">分类</div>
@@ -94,6 +97,7 @@
 								<div class="ui left labeled action input">
 									<label for="" class="ui compact teal basic label">标签</label>
 									<div class="ui fluid selection dropdown">
+										<!-- tags 这里需要重做 -->
 										<input type="hidden"  id="tags" value="" th:value="${blog.tags}" />
 										<i class="dropdown icon"></i>
 										<div id="tag_text" class="default text">标签</div>
@@ -108,6 +112,7 @@
 						<div class="field">
 							<div class="ui left labeled input">
 								<label for="" class="ui teal basic label">首图</label>
+								<!-- indexPicture 这里需要重做 -->
 								<input type="text" name="indexPicture" placeholder="首图引用地址" id="first_p" th:value="${blog.firstPicture}"  />
 							</div>
 							
@@ -115,24 +120,28 @@
 						<div class="inline fields">
 							<div class="field">
 								<div class="ui checkbox">
+									<!-- recommend 这里需要重做 -->
 									<input type="checkbox" name="recommend" id="recommend" class="hidden" th:checked="${blog.recommend}>0" />
 									<label for="recommend">推荐</label>
 								</div>
 							</div>
 							<div class="field">
 								<div class="ui checkbox">
+									<!-- share 这里需要重做 -->
 									<input type="checkbox" name="shareInfo" id="shareInfo" class="hidden" th:checked="${blog.share}>0"/>
 									<label for="shareInfo">转载声明</label>
 								</div>
 							</div>
 							<div class="field">
 								<div class="ui checkbox">
+									<!-- appreciation 这里需要重做 -->
 									<input type="checkbox" id="appreciation" class="hidden" th:checked="${blog.appreciation}>0" />
 									<label for="appreciation">赞赏</label>
 								</div>
 							</div>
 							<div class="field">
 								<div class="ui checkbox">
+									<!-- comment 这里需要重做 -->
 									<input type="checkbox" id="comment" class="hidden" th:checked="${blog.commentable}>0" />
 									<label for="comment">评论</label>
 								</div>
@@ -140,7 +149,7 @@
 						</div>
 						<div class="ui error message"></div>
 						<div class="ui right aligned container">
-<!--							文章id-->
+<!--							文章id 这里需要重做-->
 							<input type="hidden" id="id" th:value="${id}"/>
 							<button class="ui button" type="button" onclick="window.history.go(-1)">返回</button>
 <!--							value 用来判断是否发布-->
@@ -158,7 +167,7 @@
 					<div class="three wide column">
 						<div class="ui inverted link list">
 							<div class="item">
-						<img src="../../images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
+						<img src="/static/images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
 					</div>
 					</div>
 					</div>
@@ -189,8 +198,8 @@
 		</footer>
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-		<script src="../../lib/editormd/editormd.amd.min.js"></script>
-		<script src="../../js/blogEdit.js"></script>
+		<script src="/static/lib/editormd/editormd.amd.min.js"></script>
+		<script src="/static/js/blogEdit.js"></script>
 		<script>
 			/*markdown初始化*/
 			var contentEditor;
@@ -199,7 +208,7 @@
                     width   : "100%",
                     height  : 640,
                     syncScrolling : "single",
-                    path    : "../../lib/editormd/lib/"
+                    path    : "/static/lib/editormd/lib/"
                 });
              });
 			$('.menu.toggle').click(function(){
